LF resolved slider z-index issue

--- a/lunchtime-flavorites-style.css
+++ b/lunchtime-flavorites-style.css
@@ -372,17 +372,17 @@ th {
   top: 70% !important;
 }
 
-.step-5 .stacked:first-child:not(.ui-draggable-dragging) {
+.step-5 .stacked:nth-child(2):not(.ui-draggable-dragging) {
   top: 22% !important;
   left: 8% !important;
   width: 60px !important;
 }
 
-.step-5 .stacked:first-child:not(.ui-draggable-dragging) img {
+.step-5 .stacked:nth-child(2):not(.ui-draggable-dragging) img {
   width: auto !important;
 }
 
-.step-5 .stacked:nth-child(2):not(.ui-draggable-dragging) {
+.step-5 .stacked:nth-child(3):not(.ui-draggable-dragging) {
   bottom: -5% !important;
   right: 3% !important;
   -ms-transform: none !important;
@@ -393,7 +393,7 @@ th {
   width: 60px !important;
 }
 
-.step-5 .stacked:nth-child(2):not(.ui-draggable-dragging) img {
+.step-5 .stacked:nth-child(3):not(.ui-draggable-dragging) img {
   width: auto !important;
 }
 
@@ -479,7 +479,7 @@ th {
   color: #fff;
   text-transform: uppercase;
   font-weight: 800;
-  width: 60%;
+  width: 100%;
 }
 
 .type-your-name:focus {
@@ -541,6 +541,10 @@ th {
   background-position: top center;
   height: 50%;
   background-repeat: no-repeat;
+}
+
+.stacked.ui-draggable-dragging {
+  z-index: 99;
 }
 
 .how-to-play-wrapper {
